# HexCrawl

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BOARD.md  CLAUDE.md  DECISIONS.md  Dockerfile  PREDICTIONS.md  QUESTIONS.md  QUIZZES.md  SENIOR_BRIEF.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/commands/: audit.md  copilot-review.md  debug.md  implement.md  open-pr.md  pickup.md  quiz.md  rebase.md  ship.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: frontend.yml  python.yml
alembic/: env.py
alembic/versions/: cb4012b33ce0_create_game_and_score_tables.py  f80ddbda61f8_create_weekly_leaderboard_archive.py  ffa16bba8245_initial_baseline.py
assets/: README.md  manifest.json
assets/tools/: gen_tiles.py  key_sprites.py
docs/: art-assets.md  auth-setup.md  storage-setup.md
docs/palettes/: gameboy-4.gpl
frontend/: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  router.tsx
frontend/src/gameover/: GameOver.test.tsx  GameOver.tsx  gameOverModel.test.ts  gameOverModel.ts
frontend/src/hud/: Hud.test.tsx  Hud.tsx  hudModel.ts
frontend/src/input/: useKeyboardInput.test.ts  useKeyboardInput.ts
frontend/src/net/: useGameSocket.test.ts  useGameSocket.ts
frontend/src/render/: GameCanvas.test.tsx  GameCanvas.tsx  camera.test.ts  camera.ts  drawFloor.test.ts  drawFloor.ts  enemySprites.ts  itemSprites.ts  playerAnimation.test.ts  playerAnimation.ts  playerSprite.ts  tileSet.ts
frontend/src/routes/: GameScreen.tsx  LeaderboardScreen.tsx  LoginScreen.tsx
frontend/src/store/: gameStore.test.ts  gameStore.ts
frontend/src/test/: setup.ts
frontend/src/types/: gameState.ts  socket.ts
src/: config.py
src/adapters/cache/: redis_cache.py
src/adapters/db/: base.py  game_repository.py  models.py  score_admin_repository.py  score_repository.py
src/adapters/tasks/: celery_app.py  map_generation.py  score_recalc.py  (+1 more)
src/application/: abandon_game.py  floor_cache.py  game_state.py  generate_floor.py  get_game.py  get_leaderboard.py  get_my_scores.py  leaderboard_cache.py  process_turn.py  rebuild_leaderboard.py  reset_weekly_leaderboard.py  start_game.py  submit_score.py
tests/: conftest.py
tests/unit/: test_config.py
(+102 files in other folders)
