[project]
name = "hexcrawl"
version = "0.0.0"
description = "Browser-based turn-based dungeon crawler with a global leaderboard."
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "asyncpg>=0.29",
    "fastapi>=0.115",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt[crypto]>=2.9",
    "redis>=8.0.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "structlog>=26.1.0",
]

[dependency-groups]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "hypothesis",
    "testcontainers[postgres,redis]",
    "httpx2>=2.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
python_version = "3.12"
strict = true
# pydantic-settings fills required fields (e.g. jwt_secret) from the environment
# at runtime, so `Settings()` takes no args — the plugin teaches mypy that.
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["src.domain.*", "src.application.*"]
disallow_any_explicit = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["src"]
omit = ["src/**/__init__.py"]

[tool.coverage.report]
show_missing = true
